--- a/index.html
+++ b/index.html
@@ -21,12 +21,54 @@
         </div>
     </header>
     <!--fin du header-->
+    <!--début de la partie haute-->
     <div class="top">
         <div class="title">
             <h2>Réservez le menu qui vous convient</h2>
                 <p class="select">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                <button>Explorer nos restaurants</button>
+                <button class="top-btn">Explorer nos restaurants</button>
         </div>
     </div>
+    <!--fin de la partie haute-->
+
+    <!--début de la partie fonctionnement-->
+    <div class="fonctioning">
+        <h2>Fonctionnement</h2>
+        <button class="fonctioning-btn"><i class="fa-solid fa-mobile"></i><span class="fonctioning-text">Choisissez un restaurant</span></button>
+        <button class="fonctioning-btn"><i class="fa-solid fa-bars"></i> <span class="fonctioning-text">Composez votre menu</span></button>
+        <button class="fonctioning-btn"><i class="fa-solid fa-shop"></i> <span class="fonctioning-text">Dégustez au restaurant</span></button>
+    </div>
+    <!--Fin de la partie fonctionnement-->
+
+
+    <!--Début de la partie card-->
+
+    <div class="all-cards">
+
+    
+        <div>
+            <h2>Restaurants</h2>
+        </div>
+
+        <div>
+            <div class="card">
+                <div class="card-img">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+                </div>
+                <div class="card-text">
+                    <h3>La palette du goût</h3>
+                    <p>Ménilmontant</p>
+                    <i class="fa-regular fa-heart"></i>
+                </div>
+            </div>
+        </div>
+
+
+
+    
+    </div>
+
+
+
 </body>
 </html>
