--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ohmyfood</title>
+    <link rel="stylesheet" href="css/palette-du-gout.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
+     <!--début du header-->
+     <header>
+        <i class="fa-solid fa-arrow-left"></i>
+        <div class="logo">
+            <img src="images/logo/ohmyfood@2x.svg" alt="logo">
+        </div>
+    </header>
+    <!--fin du header-->
+
+    <!-- Début de la partie haute-->
+
+    <div class="palette-du-gout-img"> 
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette-du-gout">
+    </div>
     
 </body>
 </html>
