modification taille de police, modification partie partie top, fonctionnement(modification taille du bouton,ajout icon,)

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <!--début de la partie haute-->
     <div class="top">
         <div class="title">
-            <h2>Réservez le menu qui vous convient</h2>
-                <p class="select">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                <button class="top-btn">Explorer nos restaurants</button>
+            <h2 class="title-top">Réservez le menu qui vous convient</h2>
+            <p class="select">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <button class="top-btn">Explorer nos restaurants</button>
         </div>
     </div>
     <!--fin de la partie haute-->
@@ -34,9 +34,9 @@
     <!--début de la partie fonctionnement-->
     <div class="fonctioning">
         <h2 class="title-fonctioning">Fonctionnement</h2>
-        <button class="fonctioning-btn"><i class="fa-solid fa-mobile"></i><span class="fonctioning-text">Choisissez un restaurant</span></button>
-        <button class="fonctioning-btn"><i class="fa-solid fa-bars"></i> <span class="fonctioning-text">Composez votre menu</span></button>
-        <button class="fonctioning-btn"><i class="fa-solid fa-shop"></i> <span class="fonctioning-text">Dégustez au restaurant</span></button>
+        <img src="./images/icon/boutton1.svg" alt="bouton1">
+        <img src="./images/icon/bonton2.svg" alt="bouton2">
+        <img src="./images/icon/bouton3.svg" alt="bouton3">
     </div>
     <!--Fin de la partie fonctionnement-->
 
