--- a/index.html
+++ b/index.html
@@ -67,77 +67,82 @@
 
 
     <!--Début de la partie card-->
-    <div class="resto">
-        <div class="all-cards">
+    <div class="back">
+        <div class="resto">
+            <div class="all-cards">
 
-            <div class="restaurant">
-                <h2 class="restaurant-title">Restaurants</h2>
+                <div class="restaurant">
+                    <h2 class="restaurant-title">Restaurants</h2>
+                </div>
+
+                <!-- bloc qui contient toutes les cards -->
+                <div class="cards-bloc">
+                    <div class="card">
+                        <div class="card-img" id="card1">
+                            <!-- <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"> -->
+                        </div>
+                        <div class="card-text">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <input type="checkbox" id="resto-1">
+                            <label for="resto-1" class="test1">
+                                <!--<i class="fa-regular fa-heart dislike"></i>-->
+                                <i class="fa-regular fa-heart dislike"></i>
+                                <!--<svg xmlns="http://www.w3.org/2000/svg" class="dislike" viewBox="0 0 512 512">--><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--> <!--<path d="M225.8 468.2l-2.5-2.3L48.1 303.2C17.4 274.7 0 234.7 0 192.8l0-3.3c0-70.4 50-130.8 119.2-144C158.6 37.9 198.9 47 231 69.6c9 6.4 17.4 13.8 25 22.3c4.2-4.8 8.7-9.2 13.5-13.3c3.7-3.2 7.5-6.2 11.5-9c0 0 0 0 0 0C313.1 47 353.4 37.9 392.8 45.4C462 58.6 512 119.1 512 189.5l0 3.3c0 41.9-17.4 81.9-48.1 110.4L288.7 465.9l-2.5 2.3c-8.2 7.6-19 11.9-30.2 11.9s-22-4.2-30.2-11.9zM239.1 145c-.4-.3-.7-.7-1-1.1l-17.8-20-.1-.1s0 0 0 0c-23.1-25.9-58-37.7-92-31.2C81.6 101.5 48 142.1 48 189.5l0 3.3c0 28.5 11.9 55.8 32.8 75.2L256 430.7 431.2 268c20.9-19.4 32.8-46.7 32.8-75.2l0-3.3c0-47.3-33.6-88-80.1-96.9c-34-6.5-69 5.4-92 31.2c0 0 0 0-.1 .1s0 0-.1 .1l-17.8 20c-.3 .4-.7 .7-1 1.1c-4.5 4.5-10.6 7-16.9 7s-12.4-2.5-16.9-7z"/></svg>-->
+                                
+                                <img src="./images/icon/Like.svg" class="like" alt="like image">
+                            </label>
+                        </div>
+                    </div>
+
+
+                    <div class="card">
+                        <div class="card-img" id="card2">
+                            <!-- <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"> -->
+                        </div>
+                        <div class="card-text">
+                            <h3>La la note enchantée</h3>
+                            <p>Charonne</p>
+                            <input type="checkbox" id="resto-2">
+                            <label for="resto-2" class="test1">
+                                <i class="fa-regular fa-heart dislike"></i>
+                                <img src="./images/icon/Like.svg" class="like" alt="like image">
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img" id="card3">
+                            <!-- <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"> -->
+                        </div>
+                        <div class="card-text">
+                            <h3>À la française</h3>
+                            <p>Cité rouge</p>
+                            <input type="checkbox" id="resto-3">
+                            <label for="resto-3" class="test1">
+                                <i class="fa-regular fa-heart dislike"></i> 
+                                <img src="./images/icon/Like.svg" class="like" alt="like image">
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img" id="card4">
+                            <!-- <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"> -->
+                        </div>
+                        <div class="card-text">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie Méricourt</p>
+                            <input type="checkbox" id="resto-4">
+                            <label for="resto-4" class="test1">
+                                <i class="fa-regular fa-heart dislike"></i>
+                                <img src="./images/icon/Like.svg" class="like" alt="like image">
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-
-            <!-- bloc qui contient toutes les cards -->
-            <div class="cards-bloc">
-                <div class="card">
-                    <div class="card-img" id="card1">
-                        <!-- <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"> -->
-                    </div>
-                    <div class="card-text">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <input type="checkbox" id="resto-1">
-                        <label for="resto-1" class="test1">
-                            <img src="./images/icon/disLike.svg" class="dislike" alt="Dislike image">
-                            <img src="./images/icon/Like.svg" class="like" alt="like image">
-                        </label>
-                    </div>
-                </div>
-
-
-                <div class="card">
-                    <div class="card-img" id="card2">
-                        <!-- <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"> -->
-                    </div>
-                    <div class="card-text">
-                        <h3>La la note enchantée</h3>
-                        <p>Charonne</p>
-                        <input type="checkbox" id="resto-2">
-                        <label for="resto-2" class="test1">
-                            <img src="./images/icon/disLike.svg" class="dislike" alt="Dislike image">
-                            <img src="./images/icon/Like.svg" class="like" alt="like image">
-                        </label>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-img" id="card3">
-                        <!-- <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"> -->
-                    </div>
-                    <div class="card-text">
-                        <h3>À la française</h3>
-                        <p>Cité rouge</p>
-                        <input type="checkbox" id="resto-3">
-                        <label for="resto-3" class="test1">
-                            <img src="./images/icon/disLike.svg" class="dislike" alt="Dislike image">
-                            <img src="./images/icon/Like.svg" class="like" alt="like image">
-                        </label>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-img" id="card4">
-                        <!-- <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"> -->
-                    </div>
-                    <div class="card-text">
-                        <h3>Le délice des sens</h3>
-                        <p>Folie Méricourt</p>
-                        <input type="checkbox" id="resto-4">
-                        <label for="resto-4" class="test1">
-                            <img src="./images/icon/disLike.svg" class="dislike" alt="Dislike image">
-                            <img src="./images/icon/Like.svg" class="like" alt="like image">
-                        </label>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 
@@ -145,23 +150,23 @@
     <footer>
         <div class="footer">
 
-            <div>
+            <div class="footer-logo">
                 <h2 class="logo2">ohmyfood</h2>
             </div>
             <div>
-                <ul>
-                    <li>
+                <ul class="link-footer">
+                    <li class="link">
                         <i class="fa-solid fa-utensils"></i>
                         <a href="#" class="footer-link">Proposer un restaurant</a>
                     </li>
-                    <li>
-                        <i class="fa-regular fa-handshake"></i>
+                    <li class="link">
+                        <i class="fa-solid fa-handshake-angle"></i>
                         <a href="#" class="footer-link">Devenir partenaire</a>
                     </li>
-                    <li>
+                    <li class="link">
                         <a href="#" class="footer-link">Mention légales</a>
                     </li>
-                    <li>
+                    <li class="link">
                         <a href="#" class="footer-link">Contact</a>
                     </li>
                 </ul>
