Avancement sur l'animation des menus

--- a/palette-du-gout.html
+++ b/palette-du-gout.html
@@ -43,13 +43,61 @@
 
         <div class="entree">
           <h4 class="title-menu">ENTRÉES</h4>
-          <div class="menu">
+          <!--<div class="menu">
             <h3 class="title-h3">Fricassée d'escargots</h3>
             <p class="menu-p">Au piment d'Éspelette</p>
             <span class="prix1">25€</span>
-          </div>
+          </div>-->
+          <input type="checkbox" id="menu1">
+          <label class="menu" for="menu1"> 
+            <div class="info">
+                <div>
+                    <h3 class="title-h3">Fricassée d'escargots</h3>
+                    <p class="menu-p">Au piment d'Éspelette</p> 
+                </div>
+                <div class="price">
+                    <span class="prix1">25€</span>
+                </div>
+            </div>
+            <div class="check"> 
+                <img src="images/icon/Check.svg" alt="check">
+            </div>
+          </label>
 
-          <div class="menu">
+
+          <input type="checkbox" id="menu2">
+          <label class="menu" for="menu2"> 
+            <div class="info">
+                <div>
+                    <h3 class="title-h3">Foie gras de canard mi-cuit</h3>
+                    <p class="menu-p">Et ses copeaux de truffe noire</p> 
+                </div>
+                <div class="price">
+                    <span class="prix1">35€</span>
+                </div>
+            </div>
+            <div class="check"> 
+                <img src="images/icon/Check.svg" alt="check">
+            </div>
+          </label>
+
+
+          <input type="checkbox" id="menu3">
+          <label class="menu" for="menu3"> 
+            <div class="info">
+                <div>
+                    <h3 class="title-h3">Oeuf au plat</h3>
+                    <p class="menu-p">Assaisonné à la truffe sur lit de caviar</p> 
+                </div>
+                <div class="price">
+                    <span class="prix1">20€</span>
+                </div>
+            </div>
+            <div class="check"> 
+                <img src="images/icon/Check.svg" alt="check">
+            </div>
+          </label>
+          <!--<div class="menu">
             <h3 class="title-h3">Foie gras de canard mi-cuit</h3>
             <p class="menu-p">Et ses copeaux de truffe noire</p>
             <span class="prix2">35€</span>
@@ -59,7 +107,7 @@
             <h3 class="title-h3">Oeuf au plat</h3>
             <p class="menu-p">Assaisonné à la truffe sur lit de caviar</p>
             <span class="prix3">20€</span>
-          </div>
+          </div>-->
         </div>
 
 
