Partie desktop et partie mobile sur toute les pages terminer

--- a/index.html
+++ b/index.html
@@ -77,67 +77,74 @@
 
                 <!-- bloc qui contient toutes les cards -->
                 <div class="cards-bloc">
-                    <div class="card">
-                        <div class="card-img" id="card1">
-                            <span class="news">Nouveau</span>
+                    <a href="la-palette-du-gout.html" class="card-nav">
+                        <div class="card">
+                            <div class="card-img" id="card1">
+                                <span class="news">Nouveau</span>
+                            </div>
+                            <div class="card-text">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                                <input type="checkbox" id="resto-1">
+                                <label for="resto-1" class="test1">
+                                    <!--<i class="fa-regular fa-heart dislike"></i>-->
+                                    <img src="./images/icon/Like.png" class="dislike" alt="coeur">                                
+                                    <img src="./images/icon/Like.svg" class="like" alt="like image">
+                                </label>
+                            </div>
                         </div>
-                        <div class="card-text">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <input type="checkbox" id="resto-1">
-                            <label for="resto-1" class="test1">
-                                <!--<i class="fa-regular fa-heart dislike"></i>-->
-                                <img src="./images/icon/Like.png" class="dislike" alt="coeur">                                
-                                <img src="./images/icon/Like.svg" class="like" alt="like image">
-                            </label>
-                        </div>
-                    </div>
+                    </a>
 
+                    <a href="la-note-enchantee.html" class="card-nav">
+                        <div class="card">
+                            <div class="card-img" id="card2">
+                                <span class="news">Nouveau</span>
+                            </div>
+                            <div class="card-text">
+                                <h3>La note enchantée</h3>
+                                <p>Charonne</p>
+                                <input type="checkbox" id="resto-2">
+                                <label for="resto-2" class="test1">
+                                    <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
+                                    <img src="./images/icon/Like.svg" class="like" alt="like image">
+                                </label>
+                            </div>
+                        </div>
+                    </a>
 
-                    <div class="card">
-                        <div class="card-img" id="card2">
-                            <span class="news">Nouveau</span>
+                    <a href="a-la-francaise.html" class="card-nav">
+                        <div class="card">
+                            <div class="card-img" id="card3">
+                                <!-- <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"> -->
+                            </div>
+                            <div class="card-text">
+                                <h3>À la française</h3>
+                                <p>Cité rouge</p>
+                                <input type="checkbox" id="resto-3">
+                                <label for="resto-3" class="test1">
+                                    <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
+                                    <img src="./images/icon/Like.svg" class="like" alt="like image">
+                                </label>
+                            </div>
                         </div>
-                        <div class="card-text">
-                            <h3>La la note enchantée</h3>
-                            <p>Charonne</p>
-                            <input type="checkbox" id="resto-2">
-                            <label for="resto-2" class="test1">
-                                <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
-                                <img src="./images/icon/Like.svg" class="like" alt="like image">
-                            </label>
-                        </div>
-                    </div>
+                    </a>
 
-                    <div class="card">
-                        <div class="card-img" id="card3">
-                            <!-- <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"> -->
+                    <a href="le-delice-des-sens.html" class="card-nav" >
+                        <div class="card">
+                            <div class="card-img" id="card4">
+                                <!-- <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"> -->
+                            </div>
+                            <div class="card-text">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie Méricourt</p>
+                                <input type="checkbox" id="resto-4">
+                                <label for="resto-4" class="test1">
+                                    <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
+                                    <img src="./images/icon/Like.svg" class="like" alt="like image">
+                                </label>
+                            </div>
                         </div>
-                        <div class="card-text">
-                            <h3>À la française</h3>
-                            <p>Cité rouge</p>
-                            <input type="checkbox" id="resto-3">
-                            <label for="resto-3" class="test1">
-                                <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
-                                <img src="./images/icon/Like.svg" class="like" alt="like image">
-                            </label>
-                        </div>
-                    </div>
-
-                    <div class="card">
-                        <div class="card-img" id="card4">
-                            <!-- <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"> -->
-                        </div>
-                        <div class="card-text">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie Méricourt</p>
-                            <input type="checkbox" id="resto-4">
-                            <label for="resto-4" class="test1">
-                                <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
-                                <img src="./images/icon/Like.svg" class="like" alt="like image">
-                            </label>
-                        </div>
-                    </div>
+                    </a>
                 </div>
 
             </div>
