--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="top">
         <div class="title">
             <h2 class="title-top">Réservez le menu qui vous convient</h2>
-            <p class="select">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <p class="top-p">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
             <button class="top-btn">Explorer nos restaurants</button>
         </div>
     </div>
@@ -86,8 +86,7 @@
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                                 <input type="checkbox" id="resto-1">
-                                <label for="resto-1" class="test1">
-                                    <!--<i class="fa-regular fa-heart dislike"></i>-->
+                                <label for="resto-1" class="block-like">
                                     <img src="./images/icon/Like.png" class="dislike" alt="coeur">                                
                                     <img src="./images/icon/Like.svg" class="like" alt="like image">
                                 </label>
@@ -104,7 +103,7 @@
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                                 <input type="checkbox" id="resto-2">
-                                <label for="resto-2" class="test1">
+                                <label for="resto-2" class="block-like">
                                     <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
                                     <img src="./images/icon/Like.svg" class="like" alt="like image">
                                 </label>
@@ -115,13 +114,12 @@
                     <a href="a-la-francaise.html" class="card-nav">
                         <div class="card">
                             <div class="card-img" id="card3">
-                                <!-- <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"> -->
                             </div>
                             <div class="card-text">
                                 <h3>À la française</h3>
                                 <p>Cité rouge</p>
                                 <input type="checkbox" id="resto-3">
-                                <label for="resto-3" class="test1">
+                                <label for="resto-3" class="block-like">
                                     <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
                                     <img src="./images/icon/Like.svg" class="like" alt="like image">
                                 </label>
@@ -132,13 +130,12 @@
                     <a href="le-delice-des-sens.html" class="card-nav" >
                         <div class="card">
                             <div class="card-img" id="card4">
-                                <!-- <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"> -->
                             </div>
                             <div class="card-text">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie Méricourt</p>
                                 <input type="checkbox" id="resto-4">
-                                <label for="resto-4" class="test1">
+                                <label for="resto-4" class="block-like">
                                     <img src="./images/icon/Like.png" class="dislike" alt="coeur"> 
                                     <img src="./images/icon/Like.svg" class="like" alt="like image">
                                 </label>
