--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -37,7 +37,7 @@
                 <div class="title-conteneur">
                     <h2 class="name-restaurant">La note enchantée</h2>
                     <input type="checkbox" id="resto-2">
-                    <label class="test1" for="resto-2">
+                    <label class="block-like" for="resto-2">
                         <img src="./images/icon/Like.png " class="dislikee" alt="coeur"> 
                         <img src="./images/icon/Like.svg" class="likee" alt="like image">
                     </label>
