--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -51,7 +51,7 @@
       <div class="title-conteneur">
         <h2 class="name-restaurant">La palette du goût</h2>
         <input type="checkbox" id="resto-2" />
-        <label class="test1" for="resto-2">
+        <label class="block-like" for="resto-2">
           <img src="./images/icon/Like.png " class="dislike" alt="coeur" />
           <img src="./images/icon/Like.svg" class="like" alt="like image" />
         </label>
